--- a/axis-security.html
+++ b/axis-security.html
@@ -41,7 +41,7 @@
 <script type="text/javascript">
 RED.nodes.registerType('axis-security',{
 	category: 'Axis',
-	color: '#FFCC33',
+	color: '#090909',
 	defaults: {
 		name: { value:""},
 		preset: {type:"axis-preset"},
